working on log in modal, added icon to create div, fixed css alignment

--- a/react-app/src/components/Homepage/Homepage.css
+++ b/react-app/src/components/Homepage/Homepage.css
@@ -41,17 +41,34 @@
   background-color:#f2f4f5;
 }
 
-.createPostDiv:hover {
+.createIcon  {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 40px;
+}
+
+.createIcon > img {
+  border-radius: 50%;
+  height: 38px;
+  width: 45px;
+  background-color: rgba(123, 121, 129, 0.467);
+  margin-left: 10px;
+}
+
+.inputBox:hover {
   border: 1px solid rgb(64, 59, 59);
 }
 
 .createInputContainer > input{
   display: flex;
   align-items: center;
+  text-indent: 20px;
   flex-direction: row;
   background-color: rgb(232, 232, 249);
   border-style: none;
-  width: 399px;
+  border-radius: 4px;
+  width: 500px;
   height: 38px;
   align-items: center;
   margin-left: 20px;
@@ -75,14 +92,14 @@
   flex-direction: column;
   justify-content: flex-start;
   /* align-items: center; */
-  margin: auto;
+  margin-left: 20px;
   /* border: 1px solid lightgray; */
 }
 
 .postTopDescription {
   display: flex;
-  font-size: 14px;
-  font-family: sans-serif;
+  font-size: 12px;
+  font-family: verdana,sans-serif;
   color: rgb(43, 40, 40);
 }
 
@@ -91,8 +108,8 @@
   margin-right: 1rem;
 }
 .postTitle{
-  font-size: 20px;
-  font-family: sans-serif;
+  font-size: 18px;
+  font-family: verdana,sans-serif;
   color: rgb(43, 40, 40);
   padding-top: 5px;
   padding-bottom: 5px;
