--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -15,6 +15,7 @@
   top: 0px;
   background-color: #f2f4f5;
   width: 100%;
+  z-index: 2;
   /* margin-left: 8%;
   margin-right: 8%; */
 }
@@ -53,7 +54,7 @@
 .menu_drop > span {
   padding-left: 5px;
   font-size: 14px;
-  font-family: sans-serif;
+  font-family: verdana, sans-serif;
   color: rgb(43, 40, 40);
   align-items: center;
 }
@@ -80,7 +81,7 @@
 #menu {
   cursor: pointer;
   position: absolute;
-  font-family: sans-serif;
+  font-family: verdana,sans-serif;
   z-index: 2;
   top: 60px;
   right: 20px;
