--- a/react-app/src/components/SubredditPage/Subreddit.css
+++ b/react-app/src/components/SubredditPage/Subreddit.css
@@ -1,3 +1,11 @@
+
+.rowOneSubreddit {
+  margin-top: 1rem;
+}
+
+.rowTwoSubreddit {
+  margin-top: 1rem;
+}
 .subredditBanner {
   display: flex;
   flex-direction: column;
@@ -34,7 +42,7 @@
   height: 80px;
   width: 350px;
   margin-bottom: 14px;
-  top: 15.5rem;
+  top: 11.5rem;
 }
 
 .subredditIcon {
@@ -67,13 +75,13 @@
 }
 
 .bigSubredditName {
-  font-family: sans-serif;
-  font-size: 28px;
+  font-family: verdana,sans-serif;
+  font-size: 24px;
   padding-bottom: 5px;
 }
 
 .littleSubredditName {
-  font-family: sans-serif;
+  font-family: verdana,sans-serif;
   font-size: 14px;
 }
 
@@ -98,7 +106,7 @@
 .aboutSubreddit > span {
   align-self: center;
   padding-left: 15px;
-  font-family: sans-serif;
+  font-family: verdana, sans-serif;
   font-weight: 500;
   color: #f2f4f5;
 }
@@ -111,8 +119,8 @@
 }
 
 .subredditDescription {
-  font-size: 16px;
-  font-family: sans-serif;
+  font-size: 14px;
+  font-family: verdana,sans-serif;
 }
 
 .subredditCreatePostDiv {
@@ -126,8 +134,8 @@
 .createSubredditPost {
   display: flex;
   align-items: center;
-  font-family: sans-serif;
-  font-size: 15px;
+  font-family: verdana, sans-serif;
+  font-size: 14px;
   justify-content: center;
   /* border: 1px solid red; */
   border-radius: 9999px;
